scss/underdog/objects/_aside-layout.scss
// Creates a sidebar + content layout where the sidebar is always fixed in view,
// but the content is allowed to scroll independently. Works best when the parent container has a set height.
// SEE: aside-layout.md
.aside-layout {
  display: flex;
  // Prevent the entire element from being scrolled.
  overflow-y: hidden;
}

.aside-layout__sidebar {
  // Don't modify the size of the sidebar
  flex: 0 0 $aside-layout-sidebar-width;
  overflow-y: auto;
}

.aside-layout__content {
  // Allow the content to the right of the sidebar to stretch to fill the remaining space.
  flex: 1 1 auto;
  // Allow the content to be scrollable.
  overflow-y: auto;
}

